fix: change index

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <li>GitHub: Yulia-Dor</li>
     </ul>
     <hr>
-    <h3>Skills</h3>
+    <h3>Skills:</h3>
     <ol>
       <li>I started my work with Microsoft Visual Basic 6.0 and Oracle database.</li>
       <li>Actively studied further work with the PostgreSQL database. Creation Backup / Restore. Creation of users with distribution of access rights. Implementation of procedures and functions, writing complex queries. Working with composite types. Implementation of PL/Python functions.</li>
